# podscript

./: .gitignore  HOWTO.md  README.md  downloaded_audio_transcript.txt  future.md  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2021-6-20%2F85a0a7fb-4b30-7168-17fc-e72680883fd0_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2021-7-13%2Fb95ccf32-2475-95f9-45ad-dad3432e4254_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2021-8-10%2F6cfe8a49-353f-35e1-1649-88a6a5d06f76_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2024-5-8%2F380102874-44100-2-53fe3dfeec6da_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2024-5-8%2F380104909-44100-2-cdea3501a6e98_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2024-5-8%2F380104948-44100-2-0d4f9ad9e9ce9_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2024-5-8%2F380105027-44100-2-60e19e37ddcb6_transcript.txt  https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fstaging%2F2025-1-25%2F395521640-44100-2-8d2ec6119d47f_transcript.txt  jung-transcript.txt  main.go  openai_whisper.go  openai_whisper_test.go
docs/: handling_large_files.md  openai_whisper.md
examples/: README.md  README_media_transcriber.md  compress_audio.sh  download_and_transcribe.sh  media_transcriber.sh  media_transcriber.sh.bak  sample_sources.txt  transcribe_large_file.sh  whisper_example.go  (+1 more)
media-transcriber/: Cargo.toml  README.md  install_rust.sh
media-transcriber/src/: local_file.rs  main.rs  podcast.rs  youtube.rs
(+66 files in other folders)
