[package]
name = "media-transcriber"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Nandakumar"]
description = "A fast media transcription tool for podcasts and YouTube videos"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
regex = "1.10"
rss = "2.0"
url = "2.5"
log = "0.4"
env_logger = "0.10"
tempfile = "3.9"
indicatif = "0.17"
colored = "2.1"
rayon = "1.8"
futures = "0.3"
async-trait = "0.1"
xml-rs = "0.8"
chrono = "0.4"
